--- a/upload/.upload.rc
+++ b/upload/.upload.rc
@@ -10,13 +10,13 @@
 ####################################
 
 # your website username
-USERNAME="user"
+USERNAME=""
 
 # your website password
-PASSWORD="abcdefgijk"
+PASSWORD=""
 
 # website login URL
-LOGINURL="http://www.torrentsite.tld/login.php"
+LOGINURL="http://www.torrent-damage.net/login.php"
 
 # logged in text: something _unique_ to check if you are logged in
 # possibly your username if it's unique and on the page you get directed to after logging in
@@ -34,17 +34,17 @@ LOGINPWD="password"
 ####################################
 
 # website search URL
-SEARCHURL="http://www.torrentsite.tld/torrents.php?search="
+SEARCHURL="http://www.torrent-damage.net/torrents.php?action=search&searchstr="
 
 # search no result text: something _unique_ to check if no results are found
-SEARCHTXT="No results found"
+SEARCHTXT="Your search did not match anything."
 
 # download dupe: 1 = yes, 0 = no
 # note: only possible if download link is on the torrents page
 DUPEDL=0
 
 # URL that needs to be prepended to the download URL
-DUPEURL="http://www.torrentsite.tld/"
+DUPEURL=""
 
 # search download link text:  something _unique_ to find the exact line
 DUPETXT="action=download"
@@ -58,31 +58,38 @@ DUPECMD="cut -d \" -f 2"
 ####################################
 
 # website upload URL
-UPLOADURL="http://www.torrent-site.tld/upload.php"
+UPLOADURL="http://www.torrent-damage.net/upload.php"
 
 # your personal announce URL
-ANNOUNCEURL="http://tracker.torrent-site.tld/s0m3p4ssk4yf0rth3s1t3/announce"
+ANNOUNCEURL="http://tracker.torrent-damage.net//announce"
 
 # upload form torrent: look for input NAME="torrent"
-UPLOADTOR="torrent"
+UPLOADTOR="file_input"
 
 # upload form category: look for select NAME="category"
-UPLOADCAT="cat"
+UPLOADCAT="type"
+
+# upload title form input
+UPLOADTITLE="title"
+
+# upload tags
+UPLOADTAG="tags"
 
 # upload form extras: look for other inputs with NAME and VALUE
 # and add to the list with: -F 'name=value'
-UPLOADXTRA="-F 'submit=true' -F 'anonymous=on' -F 'auth=s0m34uthk3yf0rth3s1t3t00' -F 'nfo=@\$NFO'"
-
+UPLOADXTRA=" -F 'submit=true' -F 'desc=<\$STRNFO' -F 'Anonymous=on'"
+# The auth field is no longer needed, upload script now auto adds it since version 0.9.7
+# -F 'auth='
 
 ####################################
 ##          PATH SETTINGS         ##
 ####################################
 
 # path to your downloads directory
-DOWNLOADS="/home/user/downloads/"
+DOWNLOADS="/home/user/downloads"
 
 # path to your torrent client watch directory
-TORRENTS="/home/user/torrents/"
+TORRENTS="/home/user/rtorrent/watch"
 
 # path to your log file: set to /dev/null to disable logging
 LOGFILE="/home/user/upload/upload.log"
@@ -94,7 +101,7 @@ CURL="curl"
 MKT="mktorrent"
 
 # path to rtorrent_fast_resume.pl: leave empty if you dont want to use this
-RFR="/home/user/rtorrent_fast_resume.pl"
+RFR=""
 
 
 ####################################
@@ -102,10 +109,10 @@ RFR="/home/user/rtorrent_fast_resume.pl"
 ####################################
 
 # string used to identify as a specific user-agent
-USERAGENT="Mozilla/4.0"
+USERAGENT="TD/3.0"
 
 # text to prepend on the torrent file before moving it to your torrents dir
-PREPEND="au."
+PREPEND="td."
 
 # check for already uploading: use with UPCHECK - 1 = yes, 0 = no
 # you only need to disable this if you expect to upload the same torrent multiple times at the same time
@@ -114,16 +121,16 @@ UPCHECK=1
 # list of categories able to be uploaded into: look for options after select NAME=category
 # if the option value is a number add it _after_ the category name
 ALLCATS=(
-	"TV/XviD" "TV/HD" "TV/Pack"
-	"Movies/XviD" "Movies/DVDR" "Movies/BluRay" "Movie/Pack" "XXX/XviD"
-	"Games/PC" "Games/Xbox" "Games/PSX" "Games/Wii" "Games/Misc" "Games/Pack"
-	"Music/MP3" "Music/FLAC" "Music/Video" "Music/Misc" "Music/Pack"
-	"0day" "Ebook" "Misc"
+	"Music" 0 "Movies" 1 "TV" 2  
+	"Apps" 3 "Games" 4 "Porn" 5 "Other" 6
 )
 
-# is the option value different than the category name? 1 = yes, 0 = no
-KEYVAL=0
+# list of groups that should be flagged as p2p. Format: "(-GrpName1|-Grpname2)", dont forget the seperator :)
+P2PCATS="(-NYDIC|-26K|-CM8|-THETA|-3DM|-NFT|-LAZi|-FUSiON|-P2P|-XWT|-LTW|-FLAWL3SS|-IMAGiNE|-SIC|-ViSiON|-Rx|-FreaK|-CaLLiOPEd|-P2PROCKS|-J4F|-aXXo|-CtrlHD|-DEViSE|-DON|-D-ZON3|-ESiR|-EuReKA|-FOM|-GRiM|-iAPULA|-iLL|-JamBo|-KingBen|-LTRG|-LTT|-Lynks|-Prodji|-STG|-Stuffies|-TD|-TDM|-TFE|-THS|-TLF|-VamPTV|-ViEW|-Vision|-VoX|-vRs|-AJP|-ALLCRiME|-AXIA|-B-G|-BLaZekVCD|-DEViSE|-DiSHON|-DNR|-ELEKTRI4KA|-EMiNENCE|-EOS|-EOSiNT|-ESiR|-Funner|-GHEYLARD|-G0LDz|-HDB|-HDC|-HDmonSK|-HDV|-HDxT|-iAPULA|-iLL|-iRO|-KingBen|-Lynks|-M14CH0|-M794|-McFly|-MMI|-PerfectionHD|-PoTuS|-PrisM|-STG|-Stuffies|-TDM|-THS|-TFE|-THORA|-tK|-TLF|-TRiBE|-TriggeR|-XSHD|-sDx|-HWE|-OOO)"
+P2PEXCEPTS=""
 
+# is the option value different than the category name? 1 = yes, 0 = no
+KEYVAL=1
 
 ####################################
 ##        FILTERS SETTING         ##
@@ -135,6 +142,10 @@ KEYVAL=0
 ## - CATS    : case sensitive,    ##
 ##             look at allcats.   ##
 ##             if KEYVAL use NUM  ##
+## - TAGS    : case insensitive	  ##
+##             must be in ""      ##
+##             can be anything    ##
+##             you want           ##
 ##                                ##
 ##  NOTE: make sure the filter    ##
 ##        ends with `let n+=1'    ##
@@ -143,44 +154,13 @@ KEYVAL=0
 
 #FILTERS[n]=REGEX
 #EXCEPTS[n]=REGEX
-#MINS[n]=NUMBER
-#MAXS[n]=NUMBER
-#CATS[n]=NUMBER|STRING
-n=0
+#MINS[n]=MIN_SIZE
+#MAXS[n]=MAX_SIZE
+#CATS[n]=UPLOAD_CAT
+#TAGS[n]=tags
+n=0;
 
-# match starts with House or Simpsons or South Park S00E00 in format XviD which are not DSR or REPACK and are between 70 and 400 MB
-FILTERS[n]="^(house|simpsons|south.park).*S[0-9]{2}E[0-9]{2}.*XviD"
-EXCEPTS[n]="DSR|REPACK"
-MINS[n]=70
-MAXS[n]=400
-CATS[n]="TV/XviD"
-let n+=1
 
-# match starts with House or CSI or NCIS S00E00 in format 720p which are between 800 and 1500 MB (1.5 GB)
-FILTERS[n]="^(house|CSI|NCIS).*S[0-9]{2}E[0-9]{2}.*720p"
-EXCEPTS[n]=
-MINS[n]=800
-MAXS[n]=1500
-CATS[n]="TV/HD"
-let n+=1
-
-# match XXX.DVDRip.XviD which are not REPACK or PROPER and are between 650 and 750 MB
-FILTERS[n]="XXX.DVDRip.XviD"
-EXCEPTS[n]="REPACK|PROPER"
-MINS[n]=650
-MAXS[n]=750
-CATS[n]="XXX/XviD"
-let n+=1
-
-# match DVDRip.XviD which are between 650 and 1500 MB (1.5 GB)
-# NOTE: this is placed after series and XXX filters so it doesn't match most DVDRip series or XXX
-# NOTE: if a DVDRip series or documentary which is not S00E00 format it will be matched as well so this filter might not be trusted
-FILTERS[n]="DVDRip.XviD"
-EXCEPTS[n]=
-MINS[n]=650
-MAXS[n]=1500
-CATS[n]="Movies/XviD"
-let n+=1
 
 ##################################
 ##         SETTINGS END         ##
